manifests/podinfov2/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: podinfov2
spec:
  replicas: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: podinfov2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: podinfov2
    spec:
      containers:
      - name: podinfov2
        image: ghcr.io/stefanprodan/podinfo:0.0.1
        ports:
        - containerPort: 9898
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 48Mi
  minReadySeconds: 10
  strategy:
    canary:
      steps:
        - setWeight: 25
        - pause: {}
        - setWeight: 50
        - pause: {}
        - setWeight: 75
        - pause: {}
        - setWeight: 100
