manifests/podinfov2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfov2
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: podinfov2
  ports:
  - port: 80
    targetPort: 9898
