manifests/podinfov2/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfov2
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "podinfov2.owl.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: podinfov2
          port: 9898
